--- a/launchapp2/resources/style.css
+++ b/launchapp2/resources/style.css
@@ -22,26 +22,16 @@ Window #apps {
     min-width: 300px;
 }
 
-Window #extraContainer {
-    background: white;
-    min-height: 23px;
+Window App #tools {
+    max-height: 100px;
+    min-height: 100px;
 }
-
-Window #extraContainer QLineEdit {
-    border: 0;
-    font-weight: bold;
-    text-align: center;
+/*
+Window App #icon {
+    max-height: 100px;
+    min-height: 100px;
 }
-
-Window #extraRequirements {
-    min-width: 10px;
-    width: 10px;
-}
-
-Window #extraRequirementsPrefix, #extraRequirementsSuffix {
-    color: #aaa;
-}
-
+*/
 QHeaderView {
     qproperty-defaultAlignment: AlignLeft;
     font-weight: 10;
@@ -56,7 +46,6 @@ DockWidget #help {
     background: transparent;
     border: none;
     padding: 5px;
-    /*max-height: 32px;*/
 }
 
 Window #header QLabel {
