Refactor models and implement `package.py:_data["label"]`

--- a/launchapp2/resources/style.css
+++ b/launchapp2/resources/style.css
@@ -31,6 +31,10 @@ Window App #label {
     font-size: 13px;
 }
 
+Window App QAbstractItemView {
+    max-height: 100px;
+}
+
 QHeaderView {
     qproperty-defaultAlignment: AlignLeft;
     font-weight: 10;
