Implement sorting for models

--- a/launchapp2/resources/style.css
+++ b/launchapp2/resources/style.css
@@ -36,8 +36,12 @@ Window App QAbstractItemView {
 }
 
 QHeaderView {
+    font-weight: bold;
+}
+
+Window #apps QHeaderView {
     qproperty-defaultAlignment: AlignLeft;
-    font-weight: 10;
+    font-weight: bold;
 }
 
 QHeaderView::section {
