Protect against erroneous right-click and unify tools and shell-from-anywhere

--- a/launchapp2/resources/style.css
+++ b/launchapp2/resources/style.css
@@ -44,6 +44,12 @@ Window #apps QHeaderView {
     font-weight: bold;
 }
 
+QMenu QLabel {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-weight: bold;
+}
+
 QHeaderView::section {
     border: 0;
     padding: 5px;
