--- a/launchapp2/resources/style.css
+++ b/launchapp2/resources/style.css
@@ -22,6 +22,10 @@ Window #apps {
     min-width: 300px;
 }
 
+Window #loading QLabel {
+    font-size: 16px;
+}
+
 Window App #tools {
     max-height: 100px;
     min-height: 100px;
