--- a/docs/theme/extra.css
+++ b/docs/theme/extra.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Peinture Fraiche";
+    src: url("Peinture Fraiche.ttf") format("truetype");
+}
+
 body,
 input {
   font-family: "Roboto", helvetica;
@@ -10,8 +15,16 @@ input {
 .md-typeset {
   text-size-adjust: 100%;
   color: #727272;
-  font-size: 1.3em;
+  font-size: 1.5em;
   line-height: 1.6;
+}
+
+.md-typeset code {
+  box-shadow: none;
+  border: 1px solid #eee;
+  color: #222;
+  padding: 3px;
+  background-color: transparent;
 }
 
 .md-typeset .codehilite, .md-typeset .highlight {
@@ -20,22 +33,33 @@ input {
   border: 1px solid #eee;
   margin-top: 0;
 }
-/*
+
 pre {
-  color: white !important;
+  color: #ccc !important;
 }
 
 .md-clipboard:before {
-    color: rgb(255, 255, 255);
+    color: rgb(200, 200, 200);
+}
+
+/* Hovering a link */
+.md-nav__link:focus, .md-nav__link:hover {
+  color: #86c8ef;
+}
+
+/* Default has some extra space here,
+   which interfers with our use of background-color */
+.md-nav__item:last-child {
+  padding-bottom: 0px;
 }
 
 .codehilite:hover .md-clipboard:before,.md-typeset .highlight:hover .md-clipboard:before,pre:hover .md-clipboard:before {
-    color: rgba(255, 255, 255, 0.54) !important
+    color: rgba(200, 200, 200, 0.54) !important
 }
-*/
+
 .codehilite code, .md-typeset .codehilite pre, .md-typeset .highlight code, .md-typeset .highlight pre {
-  /*background: transparent;*/
   font-family: "Source Code Pro";
+  font-size: 0.9em;
 }
 
 input, select, textarea{
@@ -47,8 +71,60 @@ input, select, textarea{
     border-bottom: 1px solid #f3f3f3;
 }
 
-article h1 {
+.md-typeset a, .md-typeset a:before {
+  color: #03a9f4;
+}
+
+.md-typeset h2 {
+  font-family: "Peinture Fraiche";
+  font-size: 5em;
+  color: #222;
+}
+
+[data-md-color-primary=white] .md-search__input {
+    background-color: transparent;
+    border: 1px solid #f3f3f3;
+}
+
+h2, h3, h4, b {
+    color: #333;
+}
+
+.md-nav__item.md-nav__item--active {
+  background-color: #e4f3ff;
+}
+
+.md-nav__link {
+  margin-top: 0; 
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+.md-typeset h1 {
   display: none;
+}
+
+.md-typeset h3, .md-typeset h4 {
+  font-weight: bold;
+}
+
+.md-footer-copyright__highlight {
+  display: none;
+}
+
+/* Hide left-sidebar header */
+.md-nav__title--site {
+  display: none;
+}
+
+.md-nav {
+    font-size: .6rem;
+    line-height: 1.3;
+    color: #696969;
+}
+
+nav.md-nav.md-nav--primary {
+    font-size: .65rem;
 }
 
 @media only screen and (min-width: 60em) {
@@ -61,19 +137,16 @@ article h1 {
   }
 }
 
-[data-md-color-primary=white] .md-search__input {
-    background-color: transparent;
-    border: 1px solid #f3f3f3;
+@media only screen and (min-width: 76.25em) {
+  .md-sidebar--primary .md-sidebar__inner {
+      border-right: 1px solid rgba(0, 0, 0, .07);
+  }
+
+  .md-sidebar--secondary .md-sidebar__inner {
+    border-left: 1px solid rgba(0, 0, 0, .07);
+  }
 }
 
-h2, h3, h4, b {
-    color: #333;
-}
-
-.md-typeset h1, .md-typeset h2, .md-typeset h3 {
-  font-weight: bold;
-}
-
-.md-footer-copyright__highlight {
-  display: none;
+[data-md-color-primary=white] .md-nav__link--active, [data-md-color-primary=white] .md-nav__link:active {
+    color: #03a9f4;
 }
