Fix side-menu on mid-sized width

--- a/docs/theme/landing.css
+++ b/docs/theme/landing.css
@@ -169,6 +169,13 @@
   font-size: 1.11em;
 }
 
+/* Smaller width */
+@media only screen and (max-width: 1219px) {
+  .landing {
+    display: inherit;
+  }
+}
+
 /* Mobile */
 @media only screen and (max-width: 60em) {
   .hboxlayout {
@@ -176,10 +183,6 @@
     justify-content: center;
     align-content: start;
     align-items: center;
-  }
-
-  .landing {
-    display: inherit;
   }
 
   .vboxlayout {
@@ -199,7 +202,6 @@
   }
 
   #description {
-    /*max-width: none;*/
     padding: 0;
     width: inherit;
   }
