--- a/allzpark/resources/style.css
+++ b/allzpark/resources/style.css
@@ -43,7 +43,7 @@ QHeaderView {
     font-weight: bold;
 }
 
-Window #apps QHeaderView {
+QHeaderView {
     qproperty-defaultAlignment: AlignLeft;
     font-weight: bold;
 }
@@ -56,7 +56,9 @@ QMenu QLabel {
 
 QHeaderView::section {
     border: 0;
-    padding: 5px;
+    padding: 0px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 DockWidget #help {
