--- a/allzpark/resources/style.css
+++ b/allzpark/resources/style.css
@@ -61,10 +61,12 @@ QHeaderView::section {
     padding-right: 5px;
 }
 
-DockWidget #help {
+AbstractDockWidget #dockHelp {
     background: transparent;
     border: none;
-    padding: 5px;
+    padding-left: 5px;
+    padding-bottom: 5px;
+    padding-right: 5px;
 }
 
 Window #header QLabel {
