--- a/allzpark/resources/style.css
+++ b/allzpark/resources/style.css
@@ -55,10 +55,37 @@ QMenu QLabel {
 }
 
 QHeaderView::section {
-    border: 0;
     padding: 0px;
     padding-left: 5px;
     padding-right: 5px;
+    padding-top: 5px;
+    background: #f5f5f5;
+    border: 0;
+    border-right: 1px solid #fff;
+    border-left: 1px solid #e5e5e5
+}
+
+QHeaderView::section:first {
+    border-left: 0;
+}
+
+QHeaderView::section:last {
+        border-right: 0;
+}
+
+/* Docks */
+Context #generateGraph {
+   max-width: 60px;
+    min-width: 60px;
+    max-height: 20px;
+}
+
+/* Risky, dependent on font and plaform */
+Context #overlay {
+    max-width: 200px;
+    min-width: 200px;
+    max-height: 150px;
+    min-height: 150px;
 }
 
 AbstractDockWidget #dockHelp {
