--- a/docs/theme/extra.css
+++ b/docs/theme/extra.css
@@ -65,6 +65,14 @@ input {
 /* Reduce distance between help-boxes */
 .md-typeset .admonition, .md-typeset details {
   margin: 6px 0;
+
+  /* This is normally much too small */
+  font-size: inherit;
+}
+
+.md-typeset details.quote>summary {
+    font-size: 0.7rem;
+    font-weight: 400;
 }
 
 /* Remove padding from lists, it doesn't look good */
@@ -175,6 +183,72 @@ nav.md-nav.md-nav--primary {
 
 .md-footer {
   padding-top: 100px;
+}
+
+div.tabs {
+  padding-left: 1px;
+}
+
+div.tabs button.active {
+  color: #1f1f1f;
+  position: relative;
+  border-bottom: 6px solid steelblue;
+}
+
+div.tabs button {
+  background: #fbfbfb;
+  outline: none;
+  cursor: pointer;
+  position: relative;
+  color: #6363635e;
+  border: none;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  margin: 6px 14px 7px 0px;
+  transition: 0.2s;
+  font-size: 0.7rem;
+}
+
+.tab-content {
+  background: white;
+  display: none;
+  padding: 0;
+  border: none;
+}
+
+.md-typeset .tab-content .codehilitetable .linenos {
+  display: none;
+}
+
+.md-typeset .tab-content .codehilitetable {
+  margin: 0;
+}
+
+button.tab p {
+  padding: 0;
+  margin: 0;
+  letter-spacing: 0.1rem;
+}
+
+button.tab div.tab-gap {
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  bottom: -2px;
+  margin: 0;
+  padding: 0;
+  background: #ffffff;
+  z-index: 5;
+  left: 0;
+  display: none;
+}
+
+button.tab.active div.tab-gap {
+  display: block;
+}
+
+div.tabs button.active p {
+  text-shadow: none;
 }
 
 @media only screen and (min-width: 60em) {
