--- a/docs/theme/extra.css
+++ b/docs/theme/extra.css
@@ -250,6 +250,11 @@ div.tabs button.active p {
   text-shadow: none;
 }
 
+/* Only visible on a larger surface area (not mobile) */
+.floating-image {
+  display: none;
+}
+
 @media only screen and (min-width: 60em) {
   [data-md-toggle]:checked~.md-header .md-search__input+.md-search__icon, [data-md-toggle]:checked~.md-header .md-search__input::placeholder {
       color: rgba(0, 0, 0, .30);
@@ -258,6 +263,12 @@ div.tabs button.active p {
   .md-search__input+.md-search__icon, .md-search__input::placeholder {
       color: rgba(0, 0, 0, .30);
   }
+
+  .floating-image {
+    float: right;
+    display: inherit;
+  }
+
 }
 
 @media only screen and (min-width: 76.25em) {
@@ -268,6 +279,7 @@ div.tabs button.active p {
   .md-sidebar--secondary .md-sidebar__inner {
     border-left: 1px solid rgba(0, 0, 0, .07);
   }
+
 }
 
 [data-md-color-primary=white] .md-nav__link--active, [data-md-color-primary=white] .md-nav__link:active {
