--- a/allzpark/resources/style.css
+++ b/allzpark/resources/style.css
@@ -1,21 +1,145 @@
+/*
+Following color keywords require to be formatted
+
+Main colors :
+    %(brightest)s
+    %(bright)s
+    %(base)s
+    %(dim)s
+    %(dimmest)s
+
+Selection colors :
+    %(highlight)s
+    %(highlighted)s
+
+Additional colors :
+    %(active)s
+    %(inactive)s
+
+
+https://www.w3.org/TR/SVG11/types.html#ColorKeywords
+
+*/
+
+
+
 * {
     outline: none;
+    color: %(active)s;
+    border-color: %(active)s;
+    font-family: "Open Sans";
+}
+
+
+QWidget:disabled {
+    border: none;
+    color: %(inactive)s;
+}
+
+QMenu, QLabel {
+    padding-top: 2px;
+    padding-bottom: 2px;
+    /*font-weight: bold;*/
+}
+
+.QFrame {
+    color: %(dimmest)s;
+}
+
+QPushButton {
+    border: 1px solid %(dim)s;
+    background: %(brightest)s;
+    padding: 5px;
+}
+
+QPushButton:hover {
+    border: 1px solid %(highlight)s;
+}
+
+QPushButton:pressed {
+    background: %(highlight)s;
+    color: %(highlighted)s;
+}
+
+QAbstractScrollArea {
+    background: %(base)s;
+}
+
+QToolTip, QTextEdit, QLineEdit {
+    border: 1px solid %(dim)s;
+    background: %(brightest)s;
+}
+
+QComboBox {
+    background: %(brightest)s;
+    color: %(active)s;
+    border: none;
+    padding: 2px;
+    padding-right: 0px;
+}
+
+QComboBox::drop-down {
+    border: none;
+}
+
+QComboBox::down-arrow {
+    image: url(%(res)s/down_arrow_disabled.png);
+}
+
+QComboBox::down-arrow:on,
+QComboBox::down-arrow:hover,
+QComboBox::down-arrow:focus {
+    image: url(%(res)s/down_arrow.png);
 }
 
 Window {
     min-width: 580px;
     min-height: 300px;
     height: 350px;
-    background: #eee;
+    background: %(base)s;
 }
 
 Window #header {
-    background: white;
-    border-bottom: 1px solid #ccc;
+    background: %(base)s;
+    border-bottom: 1px solid %(dimmest)s;
+}
+
+Window #header QLabel {
+    padding: 0;
+}
+
+Window #header QComboBox {
+    padding: 0;
+}
+
+Window #header QPushButton[type=toggle] {
+    border: none;
+    background: transparent;
+    margin: 1px;
+}
+
+Window #header QPushButton[type=toggle]:checked {
+    background: %(dim)s;
+}
+
+Window #header QPushButton[type=toggle]:hover {
+    border: 1px solid %(highlight)s;
+}
+
+Window #logo {
+    width: 32px;
+    max-width: 32px;
+    height: 32px;
+    max-height: 32px;
+    padding: 0;
+}
+
+/* Give it a slight nudge */
+Window #logo:hover {
+    border: -1px solid transparent;
 }
 
 Window #pages QTableView {
-    border: 0;
     margin-bottom: 5px;
 }
 
@@ -40,73 +164,10 @@ Window App QAbstractItemView {
     max-height: 100px;
 }
 
-QHeaderView {
-    font-weight: bold;
-}
-
-QHeaderView {
-    qproperty-defaultAlignment: AlignLeft;
-    font-weight: bold;
-}
-
-QMenu QLabel {
-    padding-top: 5px;
-    padding-bottom: 5px;
-    font-weight: bold;
-}
-
-QHeaderView::section {
-    padding: 0px;
-    padding-left: 5px;
-    padding-right: 5px;
-    padding-top: 5px;
-    background: #f5f5f5;
-    border: 0;
-    border-right: 1px solid #fff;
-    border-left: 1px solid #e5e5e5
-}
-
-QHeaderView::section:first {
-    border-left: 0;
-}
-
-QHeaderView::section:last {
-        border-right: 0;
-}
-
-/* Docks */
-Context #generateGraph {
-   max-width: 60px;
-    min-width: 60px;
-    max-height: 20px;
-}
-
-/* Risky, dependent on font and plaform */
-Context #overlay {
-    max-width: 200px;
-    min-width: 200px;
-    max-height: 150px;
-    min-height: 150px;
-}
-
-AbstractDockWidget #dockHelp {
-    background: transparent;
-    border: none;
-    padding-left: 5px;
-    padding-bottom: 5px;
-    padding-right: 5px;
-}
-
-Window #header QLabel {
-    padding: 0;
-}
-
-Window #header QComboBox {
-    padding: 0;
-}
-
-Window #body {
-    background: white;
+Window #body QLineEdit {
+    border: 1px solid %(dim)s;
+    padding: 3px;
+    margin: 3px;
 }
 
 FullCommand QLineEdit {
@@ -114,140 +175,93 @@ FullCommand QLineEdit {
 }
 
 FullCommand QComboBox {
-    background: white;
-    color: #222;
-}
-
-FullCommand QComboBox {
-    border: none;
-    padding: 0;
-    padding-left: 3px;
-}
-
-FullCommand QComboBox::drop-down {
-    border: none;
-    width: 0;
-}
-
-FullCommand QComboBox::down-arrow {
-    image: url(%(res)s/logo_64.png);
-}
-
-Window #body QLineEdit {
-    border: 1px solid #ddd;
-    padding: 3px;
-    margin: 3px;
-}
-
-LineEditWithCompleter {
-    background: none;
-    border: none;
-
-    /* Leave room for hover */
-    padding-bottom: 2px;
-}
-
-/* Underline on hover */
-LineEditWithCompleter:hover {
-    border-bottom: 2px solid steelblue;
-    padding: 0px;
-}
-
-Window #header QPushButton[type=toggle] {
-}
-
-Window #logo {
-    width: 32px;
-    max-width: 32px;
-    height: 32px;
-    max-height: 32px;
-    padding: 0;
-}
-
-/* Give it a slight nudge */
-Window #logo:hover {
-    border: -1px solid transparent;
-}
-
-Console {
-    min-width: 200px;
-    min-height: 100px;
-}
-
-Options QTableView {
-    background: transparent;
-    border: none;
-}
-
-Options #label {
-    font-size: 15px;
-}
-
-QToolBar {
-    border: none;   
-}
-
-QToolButton {
-    min-height: 35px;
-}
-
-Window #header #profileBtn {
-    padding-left: -2px;
-    padding-right: -3px;
-    border: 2px solid #333;
-}
-
-Window #header #profileBtn:hover {
-    border: 2px solid steelblue;
-}
-
-Window #header #profileBtn:pressed {
-    border: 1px solid white;
-}
-
-QTableView {
-    /*background: transparent;*/
-    /*border: none;*/
+    background: %(bright)s;
 }
 
 #launchBtn {
     height: 30px;
     margin: 0;
+    margin-top: 3;
     padding: 0;
 }
 
-#launchOptionsBtn {
-    width: 30px;
-    max-height: 30px;
-    min-height: 30px;
-    min-width: 30px;
+QMenu {
+    background: %(dim)s;
 }
 
-#busyIndicator {
-    min-height: 5px;
-    max-height: 5px;
-    background: #ef6363;
+QAbstractItemView {
+    background: %(bright)s;
 }
 
-QTableView {
-    selection-background-color: #ddd;
-    selection-color: #111;
+QAbstractItemView, QMenu {
+    border: 1px solid %(dim)s;
+    selection-background-color: %(highlight)s;
+    selection-color: %(highlighted)s;
 }
 
-QTableView::item:selected {
+QAbstractItemView::item:selected:active,
+QAbstractItemView::item:selected:!focus {
+    background: %(highlight)s;
+}
+
+QTreeView::branch::selected {
+    background: %(highlight)s;
+}
+
+QTreeView::branch:has-children:!has-siblings:closed,
+QTreeView::branch:closed:has-children:has-siblings {
+    image: url(%(res)s/branch_closed.png);
+}
+
+
+QTreeView::branch:open:has-children:!has-siblings,
+QTreeView::branch:open:has-children:has-siblings  {
+    image: url(%(res)s/branch_open.png);
+}
+
+
+QTreeView::branch:has-children:!has-siblings:closed:hover,
+QTreeView::branch:closed:has-children:has-siblings:hover {
+    image: url(%(res)s/branch_closed-on.png);
+}
+
+
+QTreeView::branch:open:has-children:!has-siblings:hover,
+QTreeView::branch:open:has-children:has-siblings:hover  {
+    image: url(%(res)s/branch_open-on.png);
+}
+
+QAbstractItemView::item:selected {
     border: none;
-}
-
-QTableView::item:selected:!active {
     background: transparent;
 }
 
-QTableView::item:selected:active, QTableView::item:selected:!focus {
-    background: #add9f2;
+QAbstractItemView::item::hover {
+    background: transparent;
 }
 
-QFrame {
+QHeaderView {
     border: none;
+    font-weight: bold;
+    qproperty-defaultAlignment: AlignLeft;
+}
+
+QHeaderView::section {
+    padding: 0px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 5px;
+    background: %(base)s;
+    border: none;
+    border-top: none;
+    border-bottom: 1px solid %(dim)s;
+    border-left: none;
+    border-right: 1px solid %(dim)s;
+}
+
+QHeaderView::section::last
+{
+    border-right: none;
 }
 
 Profiles QTreeView::item {
@@ -262,9 +276,180 @@ Profiles QPushButton {
     background: transparent;
     margin: 0;
     padding: 0px;
-    border: 0;
+    border: none;
 }
 
-Profiles QPushButton:hover {
-    background-color: #add9f2;
+/* Docks */
+Context #generateGraph {
+    max-width: 60px;
+    min-width: 60px;
+    max-height: 20px;
+}
+
+/* Risky, dependent on font and platform */
+Context #overlay {
+    max-width: 200px;
+    min-width: 200px;
+    max-height: 150px;
+    min-height: 150px;
+}
+
+QDockWidget {
+    background: %(base)s;
+    border: 1px solid %(dim)s;
+}
+
+QDockWidget::title {
+    background-color: %(dim)s;
+    padding: 3px;
+}
+
+QDockWidget::float-button, QDockWidget::close-button {
+}
+
+QDockWidget #dockHelp {
+    border: none;
+    padding: 5px;
+}
+
+LineEditWithCompleter {
+    border: none;
+    /* Leave room for hover */
+    padding-bottom: 2px;
+}
+
+/* Underline on hover */
+LineEditWithCompleter:hover {
+    border-bottom: 2px solid steelblue;
+    padding: 0px;
+}
+
+Console {
+    min-width: 200px;
+    min-height: 100px;
+}
+
+Console #consolelog {
+    border: 2;
+    font-family: "JetBrains Mono";
+    font-size: 11px;
+    background: #161616;
+}
+
+Options QTableView {
+    background: transparent;
+    border: none;
+}
+
+Options #label {
+    font-size: 15px;
+}
+
+QToolBar {
+    border: none;
+}
+
+QToolButton {
+    min-height: 35px;
+}
+
+QTabWidget{
+    border: none;
+}
+
+QTabWidget::pane {
+    border: 1px solid %(dim)s;
+    border-radius: 0px;
+    padding: 3px;
+}
+
+QTabBar
+{
+    qproperty-drawBase: 0;
+}
+
+QTabBar:focus
+{
+    border: 0px transparent;
+}
+
+QTabBar::tab:top {
+    background-color: %(brightest)s;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    padding: 5px;
+}
+
+QTabBar::tab:top:!selected
+{
+    color: %(inactive)s;
+    background-color: %(base)s;
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+}
+
+QTabBar::tab:top:!selected:hover {
+    background-color: %(brightest)s;
+}
+
+QTabBar::tab:top {
+    border: 1px solid %(dim)s;
+    border-right: none;
+    border-bottom: none;
+}
+
+QTabBar::tab:top:last {
+    border-right: 1px solid %(dim)s;
+}
+
+QScrollBar:horizontal
+{
+    background-color: %(dim)s;
+    height: 15px;
+    border: none;
+    border-top: 1px solid %(dimmest)s;
+}
+
+QScrollBar::handle:horizontal
+{
+    background-color: %(bright)s;
+    min-width: 20px;
+}
+
+QScrollBar::add-line:horizontal, QScrollBar::sub-line:horizontal
+{
+    margin: 0px;
+    height: 0px;
+    width: 0px;
+}
+
+QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal
+{
+    background: none;
+}
+
+QScrollBar:vertical
+{
+    background-color: %(dim)s;
+    width: 15px;
+    border: none;
+    border-left: 1px solid %(dimmest)s;
+}
+
+QScrollBar::handle:vertical
+{
+    background-color: %(bright)s;
+    min-height: 20px;
+}
+
+QScrollBar::add-line:vertical, QScrollBar::sub-line:vertical
+{
+    margin: 0px;
+    height: 0px;
+    width: 0px;
+}
+
+QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical
+{
+    background: none;
 }
